--- a/presentation/Store.Web/Pages/Index.cshtml
+++ b/presentation/Store.Web/Pages/Index.cshtml
@@ -4,6 +4,10 @@
     ViewData["Title"] = "Home page";
 }
 
+<form action="/search" method="get">
+    <input type="text" name="query" value=""/>
+    <button type="submit">Find</button>
+    </form>
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
